--- a/src/com/v3pm_prototype/view/RobustnessAnalysis.fxml
+++ b/src/com/v3pm_prototype/view/RobustnessAnalysis.fxml
@@ -60,7 +60,7 @@
                   <Insets right="20.0" />
                </HBox.margin>
             </VBox>
-            <Label fx:id="lblSolution" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="50.0" styleClass="IBoxText" text="asd" HBox.hgrow="ALWAYS">
+            <Label fx:id="lblSolution" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="50.0" styleClass="SolutionText" HBox.hgrow="ALWAYS">
                <padding>
                   <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
                </padding>
