--- a/src/com/v3pm_prototype/view/V3PMGUI.css
+++ b/src/com/v3pm_prototype/view/V3PMGUI.css
@@ -1,41 +1,41 @@
 .Titel1 {
 	-fx-text-fill: #B10034;
-	-fx-font: 14pt "System";
+	-fx-font: 15px "System";
 }
 
 .Titel2 {
 	-fx-text-fill: #B10034;
-	-fx-font: 12pt "System";
+	-fx-font: 13px "System";
 }
 
 .Titel3 {
 	-fx-text-fill: #B10034;
-	-fx-font: 10pt "System";
+	-fx-font: 11px "System";
 	-fx-font-weight: Bold;
 }
 
 .SolutionText {
-	-fx-font: 12pt "System";
+	-fx-font: 13px "System";
 }
 
 .Scenario1 {
 	-fx-text-fill: #F3612D;
-	-fx-font: 12pt "System";
+	-fx-font: 13px "System";
 }
 
 .Scenario2 {
 	-fx-text-fill: #FBA51B;
-	-fx-font: 12pt "System";
+	-fx-font: 13px "System";
 }
 
 .InfoText {
-	-fx-text-fill: #D6D6D6;
-	-fx-font: 4pt "System";
+	-fx-text-fill: #B6B6B6;
+	-fx-font: 12px "System";
 }
 
 .IBoxText {
 	-fx-text-fill: #D6D6D6;
-	-fx-font: 8pt "System";
+	-fx-font: 9px "System";
 }
 
 .menu-bar {
